# siderust-cpp

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.prod  README.md  run-ci.sh
.github/workflows/: ci-build-test-docs.yml  ci-coverage.yml  ci-installed-consumer.yml  ci-lint.yml  ci-package.yml  ci-release.yml  ci.yml
benches/: README.md  bench_icrs_altitude_periods.cpp  bench_night_periods.cpp
build-make/: coordinates_examples  test_siderust
cmake/: siderust_cppConfig.cmake.in
docs/: Doxyfile.in  coordinates.md  doxygen-custom.css  examples.dox  mainpage.md
examples/: 01_basic_coordinates.cpp  02_coordinate_transformations.cpp  03_all_frame_conversions.cpp  03_all_frames_conversions.cpp  04_all_center_conversions.cpp  05_target_tracking.cpp  05_time_periods.cpp  06_astronomical_night.cpp  06_night_events.cpp  07_find_night_periods_365day.cpp  07_moon_properties.cpp  08_night_quality_scoring.cpp  08_solar_system.cpp  09_star_observability.cpp  10_altitude_periods_trait.cpp  10_time_periods.cpp  11_compare_sun_moon_star.cpp  11_serde_serialization.cpp  12_runtime_ephemeris.cpp  12_solar_system_example.cpp  13_coordinate_operations.cpp  13_observer_coordinates.cpp  14_bodycentric_coordinates.cpp  14_nutation_models.cpp  15_orbit_models.cpp  15_targets_proper_motion.cpp  16_jpl_precise_ephemeris.cpp  16_lambert_earth_to_mars.cpp  17_serde_serialization.cpp  17_sgp4_from_tle.cpp  18_kepler_orbit.cpp  18_lisa_pod.cpp  19_brent_root_finding.cpp  19_sky_grid_sampling.cpp  20_moon_phase.cpp  21_trackable_demo.cpp  README.md  altitude_events_example.cpp  azimuth_lunar_phase_example.cpp  bodycentric_coordinates.cpp  (+6 more)
include/siderust/: altitude.hpp  astro_context.hpp  azimuth.hpp  bodies.hpp  body_target.hpp  centers.hpp  constants.hpp  constops.h  constops.hpp  coordinates.hpp  dynamics.hpp  ephemeris.hpp  ffi_core.hpp  frames.hpp  lambert.hpp  lunar_phase.hpp  observatories.hpp  oem.hpp  orbit.hpp  orbital_center.hpp  runtime_ephemeris.hpp  sgp4.hpp  siderust.hpp  sky_grid.hpp  star_target.hpp  subject.hpp  target.hpp  time.hpp  trackable.hpp  twilight.hpp  typed_coordinates.hpp
include/siderust/coordinates/: bodycentric_transforms.hpp  cartesian.hpp  conversions.hpp  geodetic.hpp  pos_conversions.hpp  spherical.hpp  types.hpp
include/siderust/coordinates/detail/: stream.hpp
include/siderust/coordinates/types/: cartesian.hpp  spherical.hpp
include/siderust/coordinates/types/cartesian/: direction.hpp  position.hpp
include/siderust/coordinates/types/cartesian/direction/: ecliptic.hpp  equatorial.hpp
include/siderust/coordinates/types/cartesian/position/: ecliptic.hpp  equatorial.hpp  geodetic.hpp
include/siderust/coordinates/types/spherical/: direction.hpp  position.hpp
include/siderust/coordinates/types/spherical/direction/: ecliptic.hpp  equatorial.hpp  galactic.hpp  horizontal.hpp
include/siderust/coordinates/types/spherical/position/: ecliptic.hpp  equatorial.hpp  horizontal.hpp
scripts/: smoke-install-debian-bookworm.sh  validate-package-metadata.sh
tests/: test_altitude.cpp  test_bodies.cpp  test_bodycentric.cpp  test_constops.cpp  test_context.cpp  test_coordinates.cpp  test_dynamics.cpp  test_ephemeris.cpp  test_lambert.cpp  test_observatories.cpp  test_oem.cpp  test_orbits.cpp  test_sgp4.cpp  test_sky_grid.cpp  test_stream.cpp  test_subject.cpp  test_time.cpp  test_twilight.cpp
tests/installed-consumer/: CMakeLists.txt  smoke.cpp
